<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAccountActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_body_activity"
        android:orientation="vertical"
        android:padding="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre4" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_Colormod"
            android:layout_width="380dp"
            android:layout_height="42dp"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="10dp"
            android:hint="@string/colorname"
            android:textSize="18dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:textColorHint="@color/black"
            android:background="@drawable/shape_body_activity"
            android:backgroundTint="#FFF6ed"
            android:textColorLink="@color/black" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"/>


        <Button
            android:id="@+id/btn_cancelar"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/cancelar" />
        <Button
            android:id="@+id/btn_crear"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="-49dp"
            android:layout_marginLeft="200dp"
            android:text="@string/crear" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>