<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadios="26dp"
            >


            <TextView
                android:id="@+id/tv_Name"
                android:layout_width="268dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="190dp"
                android:layout_marginTop="50dp"
                android:text="@string/nombre"
                android:textColor="#000000"
                android:textSize="24dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="96dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="170dp"
                android:layout_marginTop="20dp"
                android:text="@string/nombre3"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="173dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="170dp"
                android:layout_marginTop="100dp"
                android:text="@string/color"
                android:textColor="@color/black"
                android:textSize="24dp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/iv_principal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginRight="120dp"
                android:src="@drawable/ic_launcher_background"
                app:civ_border_color="#FF000000" />

            <TextView
                android:id="@+id/tv_Color1"
                android:layout_width="180dp"
                android:layout_height="42dp"
                android:layout_marginLeft="190dp"
                android:layout_marginTop="140dp"
                android:background="@drawable/shape_body_activity"
                android:backgroundTint="@color/black"
                android:textColorLink="#FFFFFF" />

            <ImageButton
                android:id="@+id/ic_basura"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="360dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/basura"

                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>